# jolt

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  features.cmake
samples/: CMakeLists.txt  console.cpp  window.cpp
scripts/: init.cmake
src/: debug.hpp  features.hpp.in  hash.hpp  jolt.cpp  jolt.hpp  library.cpp  test.hpp  util.hpp
src/collections/: hashmap.hpp  hashset.hpp  iterator.hpp  keyvaluepair.hpp  linkedlist.hpp  valueset.hpp  vector.hpp
src/debug/: console.cpp  console.hpp
src/io/: stream.cpp  stream.hpp
src/jolt/: algorithms.hpp  api.hpp  debug.hpp  features.hpp.in  hash.cpp  hash.hpp  jolt.cpp  jolt.hpp  library.cpp  path.cpp  path.hpp  test.hpp  util.cpp  util.hpp  version.hpp.in
src/jolt/collections/: array.hpp  hashmap.hpp  hashset.hpp  iterator.hpp  keyvaluepair.hpp  linkedlist.hpp  valueset.hpp  vector.hpp
src/jolt/debug/: console.cpp  console.hpp
src/jolt/graphics/: defs.hpp  shader-mgr.cpp  shader-mgr.hpp  vulkan.cpp  vulkan.hpp  vulkancmd.cpp  vulkancmd.hpp  vulkanmemory.cpp  vulkanmemory.hpp  vulkanpresentation.cpp  vulkanpresentation.hpp  vulkanrender.cpp  vulkanrender.hpp  vulkansynchro.cpp  vulkansynchro.hpp  vulkanwindow.cpp  vulkanwindow.hpp
src/jolt/graphics/vulkan/: buffer-allocator.cpp  buffer-allocator.hpp  buffer.hpp  cmd.cpp  cmd.hpp  defs.hpp  descriptor-mgr.cpp  descriptor-mgr.hpp  download-transfer.cpp  download-transfer.hpp  gfx-pipeline-cfg.cpp  gfx-pipeline-cfg.hpp  gfx-pipeline-mgr.cpp  gfx-pipeline-mgr.hpp  memory-allocator.cpp  memory-allocator.hpp  memory.cpp  memory.hpp  pipelines.hpp  presentation_tgt.cpp  presentation_tgt.hpp  render_tgt.cpp  render_tgt.hpp  renderer.cpp  renderer.hpp  shader-mgr.cpp  shader-mgr.hpp  staging-buffer.cpp  staging-buffer.hpp  synchro.cpp  synchro.hpp  texture-allocator.cpp  texture-allocator.hpp  texture-builder.cpp  texture-builder.hpp  texture-mgr.hpp  texture.hpp  transfer-descriptor.hpp  transfer-factory.cpp  transfer-factory.hpp  (+6 more)
src/jolt/graphics/vulkan/memory/: alloc.cpp  alloc.hpp  arena.cpp  arena.hpp  heap.cpp  heap.hpp  pool.cpp  pool.hpp
src/jolt/graphics/vulkan/pipelines/: gfx-default.cpp  gfx-default.hpp
src/jolt/input/: input.hpp  keyboard.cpp  keyboard.hpp
src/jolt/io/: stream.cpp  stream.hpp
src/jolt/media/: gltf.cpp  gltf.hpp  image.hpp  model.hpp  png.cpp  png.hpp
src/jolt/memory/: allocator.cpp  allocator.hpp  arena.cpp  arena.hpp  checks.hpp  defs.hpp  heap.cpp  heap.hpp  stack.cpp  stack.hpp
src/jolt/text/: string.cpp  string.hpp  stringbuilder.cpp  stringbuilder.hpp  unicode.cpp  unicode.hpp
src/jolt/threading/: lock.hpp  lockguard.hpp  mutex.hpp  spinlock.hpp  thread.cpp  thread.hpp
src/jolt/ui/: point.hpp  rect.hpp  window.cpp  window.hpp
src/jolt/vfs/: driver.cpp  driver.hpp  fs-driver.cpp  fs-driver.hpp  vfs.cpp  vfs.hpp
src/memory/: allocator.cpp  allocator.hpp  arena.cpp  arena.hpp  checks.cpp  checks.hpp  defs.hpp  heap.cpp  heap.hpp  new.cpp  stack.cpp  stack.hpp
src/samples/: CMakeLists.txt  console.cpp  cube.cpp  shader-mgr.cpp  textures.cpp  vfs.cpp  vulkan.cpp  window.cpp
src/shaders/: CMakeLists.txt  jolt.h
src/shaders/fragment/: color-uv-multiply.frag  passthrough.frag  red.frag
src/shaders/vertex/: simple-pos-color-uv.vert  simple-pos-color.vert  triangle.vert
src/tests/: CMakeLists.txt  algorithms.cpp  collections_hashmap.cpp  collections_hashset.cpp  collections_linkedlist.cpp  collections_valueset.cpp  collections_vector.cpp  media_png.cpp  memory_allocator.cpp  memory_arena.cpp  memory_heap.cpp  memory_stack.cpp  path.cpp  text_string.cpp  text_stringbuilder.cpp  text_unicode.cpp  threading_lock.cpp  threading_spinlock.cpp  threading_thread.cpp  util.cpp  vulkan_bufferallocator.cpp  vulkan_memoryallocator.cpp  vulkan_memoryarena.cpp  vulkan_memorypool.cpp  vulkan_transfer.cpp
src/text/: string.cpp  string.hpp  stringbuilder.cpp  stringbuilder.hpp  unicode.cpp  unicode.hpp
src/threading/: lock.hpp  lockguard.hpp  spinlock.hpp  thread.cpp  thread.hpp  threadguard.hpp
src/ui/: window.cpp  window.hpp
tests/: collections_hashmap.cpp  collections_hashset.cpp  collections_linkedlist.cpp  collections_valueset.cpp  collections_vector.cpp  memory_allocator.cpp  memory_arena.cpp  memory_heap.cpp  memory_stack.cpp  text_string.cpp  text_stringbuilder.cpp  text_unicode.cpp  threading_lock.cpp  threading_spinlock.cpp  threading_thread.cpp  util.cpp
